aws/terraform/modules/ec2/eip.tf
//resource "aws_eip" "webapp_eip" {
//  instance = aws_instance.webapp.id
//  vpc      = true
//  tags = var.tags
//}
